--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ldrs": "^1.0.2",
     "livekit-server-sdk": "^2.9.7",
     "lucide-react": "^0.469.0",
+    "motion": "^12.7.4",
     "next": "14.2.22",
     "next-themes": "^0.4.4",
     "openai": "^4.78.0",
