--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@tabler/icons-react": "^3.31.0",
+    "@types/react-select": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
