--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/supabase-js": "^2.47.10",
     "@tabler/icons-react": "^3.31.0",
     "@types/react-select": "^5.0.0",
+    "@vapi-ai/web": "^2.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
@@ -40,14 +41,17 @@
     "react-dom": "^18",
     "react-markdown": "^10.0.0",
     "react-select": "^5.10.1",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.176.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.22",
     "postcss": "^8",
