--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "inflight": "^1.0.6",
+    "jotai": "^2.12.3",
     "ldrs": "^1.0.2",
     "livekit-server-sdk": "^2.9.7",
     "lucide-react": "^0.469.0",
