--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": [
-    // "next/core-web-vitals", 
-    // "next/typescript"
+    "next/core-web-vitals", 
+    "next/typescript"
   ],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off"
