--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "inflight": "^1.0.6",
     "jotai": "^2.12.3",
     "ldrs": "^1.0.2",
+    "livekit-client": "^2.11.4",
     "livekit-server-sdk": "^2.9.7",
     "lucide-react": "^0.469.0",
     "motion": "^12.7.4",
